@@ -38,6 +38,16 @@
             "8": 1.612
         },
 
+        "rackspacenovasyd": {
+            "2": 0.026,
+            "3": 0.072,
+            "4": 0.144,
+            "5": 0.288,
+            "6": 0.576,
+            "7": 1.080,
+            "8": 1.440
+        },
+
         "dreamhost": {
             "minimum": 15,
             "maximum": 200,
