@@ -101,6 +101,9 @@ Changes with Apache Libcloud in development
       method in the OpenStack driver. (LIBCLOUD-408)
       [Dave King]
 
+    - Add pricing information for Rackspace Cloud Sydney region.
+      [Tomaz Muraus]
+
   *) Storage
 
     - Allow users to filter objects starting with a prefix by passing ex_prefix
